# property_management_system

./: README.md  pyproject.toml
.github/workflows/: ci.yml
property_management_system/: hooks.py  patches.txt  setup.py
property_management_system/fixtures/: custom_field.json
property_management_system/patches/: create_custom_fields.py  create_order_type_custom_fields.py  create_quotation_custom_fields.py  create_quotation_item_data.py  create_sales_order_custom_fields,py  create_sales_order_custom_fields.py  quotation_custom_fields.py  sales_order_type_option.py
property_management_system/property_management_system/custom_doctype/: quotation.py  sale_order.py
property_management_system/property_management_system/doctype/home_unit/: home_unit.js  home_unit.json  home_unit.py  test_home_unit.py
property_management_system/property_management_system/doctype/maintenance/: maintenance.js  maintenance.json  maintenance.py  test_maintenance.py
property_management_system/property_management_system/doctype/maintenance_item/: maintenance_item.js  maintenance_item.json  maintenance_item.py  test_maintenance_item.py
property_management_system/property_management_system/doctype/owner/: owner.js  owner.json  owner.py  test_owner.py
property_management_system/property_management_system/doctype/property/: property.json  property.py  test_property.py
property_management_system/property_management_system/doctype/property_item/: property_item.js  (+3 more)
property_management_system/public/js/: quotation.js  quotation_order_type.js  sales_order.js  sales_order_after_submission.js
(+24 files in other folders)
